<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    tools:context="com.cmput401f17.eplscavengerhunt.activity.TitleActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardViewHeight"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@color/cardBackGround"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="4dp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="Scavenger Hunt"
            android:textColor="@color/colorLightText"
            android:textSize="50sp" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/title_buttons"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/card_view_title"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/title_start_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/colorButtonPink"
            android:text="@string/start_button_text" />

        <Button
            android:id="@+id/title_rules_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/colorButtonPurple"
            android:text="@string/rules_button_text" />

        <Button
            android:id="@+id/title_about_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:backgroundTint="@color/colorButtonBlue"
            android:text="@string/about_button_text" />

        <Button
            android:id="@+id/title_credits_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_marginBottom="150dp"
            android:backgroundTint="@color/colorButtonGreen"
            android:text="@string/credits_button_text" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200sp"
        android:layout_height="100sp"
        android:layout_below="@id/title_buttons"
        android:paddingStart="15sp"
        android:paddingTop="0sp"
        android:src="@drawable/epl_logo" />

</LinearLayout>
