<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/written_input"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_written_question"
            card_view:cardBackgroundColor="@color/cardBackGround"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardViewHeight"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="0dp">
            <TextView
                android:id="@+id/question_zone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/question_temp_text"
                android:textColor="@color/colorLightText"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/question_prompt_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello and welcome to the wonderful world of magic"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/colorLightText"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/question_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="imageView" />


    <!-- An editable text field with a prompt. Prompt will float above field if user is typing -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/written_user_answer_wrapper_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorDarkText"
        android:textSize="30sp">

        <EditText
            android:id="@+id/written_user_answer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType= "textAutoCorrect"
            android:hint="@string/hint"
            android:textSize="30sp"
            android:textColor="@color/colorDarkText"
            android:imeOptions="actionSend" />

    </android.support.design.widget.TextInputLayout>


    <!-- Forces skip button to be at the very bottom as long as this layout is last in XML -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">
        <Button
            android:id="@+id/question_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/cardBackGround"
            android:textColor="@color/colorLightText"
            android:text="@string/submit" />

        <Button
            android:id="@+id/question_skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardBackGround"
            android:textColor="@color/colorLightText"
            android:text="@string/skip_question" />

    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>